--- a/.github/workflows/build-openwrt-IPQ6000.yml
+++ b/.github/workflows/build-openwrt-IPQ6000.yml
@@ -20,8 +20,8 @@ on:
         默认: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/ipq6000
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/JiaY-shi/openwrt
+  REPO_BRANCH: ipq60xx-devel_nss
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config-ipq6000.cfg
   DIY_P1_SH: diy-part1-ipq6000.sh
