--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -1,264 +1,156 @@
 CONFIG_TARGET_ipq60xx=y
 CONFIG_TARGET_ipq60xx_generic=y
 CONFIG_TARGET_ipq60xx_generic_DEVICE_linksys_mr7350=y
-CONFIG_ATH_USER_REGD=y
-CONFIG_DRIVER_11AC_SUPPORT=y
-CONFIG_DRIVER_11AX_SUPPORT=y
-CONFIG_DRIVER_11N_SUPPORT=y
-CONFIG_KERNEL_BLK_CGROUP=y
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_CGROUP_CPUACCT=y
-CONFIG_KERNEL_CGROUP_DEVICE=y
-CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_PIDS=y
-CONFIG_KERNEL_CGROUP_SCHED=y
-CONFIG_KERNEL_CPUSETS=y
-CONFIG_KERNEL_FREEZER=y
-CONFIG_KERNEL_IPC_NS=y
-CONFIG_KERNEL_KEYS=y
-CONFIG_KERNEL_MEMCG=y
-CONFIG_KERNEL_MM_OWNER=y
-CONFIG_KERNEL_NAMESPACES=y
-CONFIG_KERNEL_NETPRIO_CGROUP=y
-CONFIG_KERNEL_NET_CLS_CGROUP=y
-CONFIG_KERNEL_NET_NS=y
-CONFIG_KERNEL_PID_NS=y
-CONFIG_KERNEL_USER_NS=y
-CONFIG_KERNEL_UTS_NS=y
+CONFIG_GNUTLS_ALPN=y
+CONFIG_GNUTLS_ANON=y
+CONFIG_GNUTLS_CRYPTODEV=y
+CONFIG_GNUTLS_DTLS_SRTP=y
+CONFIG_GNUTLS_HEARTBEAT=y
+CONFIG_GNUTLS_OCSP=y
+CONFIG_GNUTLS_PSK=y
+CONFIG_KERNEL_BUILD_DOMAIN="GitHub Actions"
+CONFIG_KERNEL_BUILD_USER="LVII"
 CONFIG_LIBCURL_COOKIES=y
+CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_MBEDTLS=y
-CONFIG_LIBCURL_NO_SMB="!"
+CONFIG_LIBCURL_NGHTTP2=y
+CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
-CONFIG_LIBSODIUM_MINIMAL=y
-# CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO is not set
-CONFIG_PACKAGE_ATH_DFS=y
-CONFIG_PACKAGE_MAC80211_DEBUGFS=y
-CONFIG_PACKAGE_MAC80211_MESH=y
-CONFIG_PACKAGE_NTFS-3G_HAS_PROBE=y
+CONFIG_LIBCURL_TFTP=y
+CONFIG_LIBCURL_THREADED_RESOLVER=y
+CONFIG_LIBCURL_TLS_SRP=y
+CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
-CONFIG_PACKAGE_ath11k-firmware-ipq6018=y
-CONFIG_PACKAGE_automount=y
-CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_boost=y
-CONFIG_PACKAGE_boost-chrono=y
-CONFIG_PACKAGE_boost-random=y
-CONFIG_PACKAGE_boost-system=y
-CONFIG_PACKAGE_btrfs-progs=y
+CONFIG_PACKAGE_attr=m
+CONFIG_PACKAGE_avahi-dbus-daemon=m
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_dbus=m
+# CONFIG_PACKAGE_default-settings-chn is not set
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_dns2tcp=y
-# CONFIG_PACKAGE_dnsmasq_full_auth is not set
-# CONFIG_PACKAGE_dnsmasq_full_conntrack is not set
-# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
-# CONFIG_PACKAGE_dnsmasq_full_dnssec is not set
-# CONFIG_PACKAGE_dnsmasq_full_noid is not set
-CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_etherwake=y
-CONFIG_PACKAGE_hd-idle=y
-CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_iptables-mod-iprange=y
-CONFIG_PACKAGE_iptables-mod-ipsec=y
-CONFIG_PACKAGE_iw=y
-CONFIG_PACKAGE_kmod-ath=y
-CONFIG_PACKAGE_kmod-ath11k=y
-CONFIG_PACKAGE_kmod-ath11k-ahb=y
-CONFIG_PACKAGE_kmod-ath11k-pci=y
-CONFIG_PACKAGE_kmod-cfg80211=y
-CONFIG_PACKAGE_kmod-crypto-acompress=y
-CONFIG_PACKAGE_kmod-crypto-cbc=y
-CONFIG_PACKAGE_kmod-crypto-crc32c=y
-CONFIG_PACKAGE_kmod-crypto-deflate=y
-CONFIG_PACKAGE_kmod-crypto-des=y
-CONFIG_PACKAGE_kmod-crypto-ecb=y
-CONFIG_PACKAGE_kmod-crypto-echainiv=y
-CONFIG_PACKAGE_kmod-crypto-hmac=y
-CONFIG_PACKAGE_kmod-crypto-iv=y
-CONFIG_PACKAGE_kmod-crypto-md5=y
-CONFIG_PACKAGE_kmod-crypto-rng=y
-CONFIG_PACKAGE_kmod-crypto-sha1=y
-CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-crypto-wq=y
-# CONFIG_PACKAGE_kmod-cryptodev is not set
-CONFIG_PACKAGE_kmod-fs-btrfs=y
-CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
-CONFIG_PACKAGE_kmod-fuse=y
-CONFIG_PACKAGE_kmod-gre=y
-CONFIG_PACKAGE_kmod-ipsec=y
-CONFIG_PACKAGE_kmod-ipsec4=y
-CONFIG_PACKAGE_kmod-ipsec6=y
+CONFIG_PACKAGE_iptables-mod-socket=y
+CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-filter=y
 CONFIG_PACKAGE_kmod-ipt-iprange=y
-CONFIG_PACKAGE_kmod-ipt-ipsec=y
-CONFIG_PACKAGE_kmod-iptunnel6=y
-CONFIG_PACKAGE_kmod-lib-crc16=y
-CONFIG_PACKAGE_kmod-lib-crc32c=y
-CONFIG_PACKAGE_kmod-lib-lzo=y
-CONFIG_PACKAGE_kmod-lib-raid6=y
-CONFIG_PACKAGE_kmod-lib-xor=y
-CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
-CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
-CONFIG_PACKAGE_kmod-lib-zstd=y
-CONFIG_PACKAGE_kmod-mac80211=y
-CONFIG_PACKAGE_kmod-mppe=y
-# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-# CONFIG_PACKAGE_kmod-nf-nathelper is not set
-# CONFIG_PACKAGE_kmod-nf-nathelper-extra is not set
-CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-CONFIG_PACKAGE_kmod-nls-utf8=y
-# CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr is not set
-# CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr is not set
-CONFIG_PACKAGE_kmod-qca-nss-drv-wifi-meshmgr=y
-CONFIG_PACKAGE_kmod-scsi-core=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-ipt-socket=y
+CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-tun=y
-CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-usb-storage-extras=y
-CONFIG_PACKAGE_kmod-usb-storage-uas=y
-CONFIG_PACKAGE_krb5-libs=y
-CONFIG_PACKAGE_libQt6Core=y
-CONFIG_PACKAGE_libQt6Network=y
-CONFIG_PACKAGE_libQt6Sql=y
-CONFIG_PACKAGE_libQt6Xml=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libattr=y
-CONFIG_PACKAGE_libblkid=y
+CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_libatomic=m
+CONFIG_PACKAGE_libattr=m
+CONFIG_PACKAGE_libavahi-client=m
+CONFIG_PACKAGE_libavahi-dbus-support=m
 CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libcomerr=y
+CONFIG_PACKAGE_libcap-bin=y
+CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libdouble-conversion=y
+CONFIG_PACKAGE_libdaemon=m
+CONFIG_PACKAGE_libdbus=m
 CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libext2fs=y
+CONFIG_PACKAGE_libexpat=m
+CONFIG_PACKAGE_libgnutls=m
 CONFIG_PACKAGE_libipset=y
-CONFIG_PACKAGE_liblzo=y
-CONFIG_PACKAGE_libmbedtls=y
-CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libncurses=y
-# CONFIG_PACKAGE_libnetfilter-conntrack is not set
-# CONFIG_PACKAGE_libnettle is not set
-# CONFIG_PACKAGE_libnfnetlink is not set
-# CONFIG_PACKAGE_libopenssl-conf is not set
-CONFIG_PACKAGE_libparted=y
+CONFIG_PACKAGE_libnghttp2=y
 CONFIG_PACKAGE_libpcre=y
-CONFIG_PACKAGE_libpcre2-16=y
+CONFIG_PACKAGE_libpopt=m
 CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_librt=y
+CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libselinux=y
 CONFIG_PACKAGE_libsepol=y
-CONFIG_PACKAGE_libsmartcols=y
-CONFIG_PACKAGE_libsodium=y
-CONFIG_PACKAGE_libsqlite3=y
-CONFIG_PACKAGE_libss=y
-CONFIG_PACKAGE_libstdcpp=y
-CONFIG_PACKAGE_libtorrent-rasterbar=y
-CONFIG_PACKAGE_libudns=y
-CONFIG_PACKAGE_libuuid=y
-CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_libwebsockets-full=y
-CONFIG_PACKAGE_lsblk=y
-CONFIG_PACKAGE_lua-neturl=y
-CONFIG_PACKAGE_luci-app-accesscontrol=y
-CONFIG_PACKAGE_luci-app-advanced=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_libtasn1=m
+CONFIG_PACKAGE_libtirpc=m
+CONFIG_PACKAGE_libuuid=m
+CONFIG_PACKAGE_libyaml=y
+# CONFIG_PACKAGE_luci-app-cpufreq is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs is not set
+# CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk is not set
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-p910nd=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
 CONFIG_PACKAGE_luci-app-samba=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb3disable=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ChinaDNS_NG is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_MosDNS is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NONE_V2RAY=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_NONE_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Client is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust_Server is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Simple_Obfs is not set
+# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray is not set
+# CONFIG_PACKAGE_luci-app-turboacc is not set
+# CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go is not set
+CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
+CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-i18n-p910nd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_microsocks=y
-CONFIG_PACKAGE_miniupnpd=y
-CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_musl-fts=y
-CONFIG_PACKAGE_ntfs-3g=y
-CONFIG_PACKAGE_parted=y
-CONFIG_PACKAGE_ppp-mod-pppol2tp=y
-CONFIG_PACKAGE_pptpd=y
-CONFIG_PACKAGE_qBittorrent-Enhanced-Edition=y
-CONFIG_PACKAGE_qt6-plugin-libqopensslbackend=y
-CONFIG_PACKAGE_qt6-plugin-libqsqlite=y
+CONFIG_PACKAGE_p910nd=y
+# CONFIG_PACKAGE_pdnsd-alt is not set
 CONFIG_PACKAGE_resolveip=y
+CONFIG_PACKAGE_ruby=y
+CONFIG_PACKAGE_ruby-bigdecimal=y
+CONFIG_PACKAGE_ruby-date=y
+CONFIG_PACKAGE_ruby-digest=y
+CONFIG_PACKAGE_ruby-enc=y
+CONFIG_PACKAGE_ruby-forwardable=y
+CONFIG_PACKAGE_ruby-pstore=y
+CONFIG_PACKAGE_ruby-psych=y
+CONFIG_PACKAGE_ruby-stringio=y
+CONFIG_PACKAGE_ruby-strscan=y
+CONFIG_PACKAGE_ruby-yaml=y
 CONFIG_PACKAGE_samba36-server=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_simple-obfs=y
-CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_strongswan=y
-CONFIG_PACKAGE_strongswan-charon=y
-CONFIG_PACKAGE_strongswan-ipsec=y
-CONFIG_PACKAGE_strongswan-minimal=y
-CONFIG_PACKAGE_strongswan-mod-aes=y
-CONFIG_PACKAGE_strongswan-mod-gmp=y
-CONFIG_PACKAGE_strongswan-mod-hmac=y
-CONFIG_PACKAGE_strongswan-mod-kernel-libipsec=y
-CONFIG_PACKAGE_strongswan-mod-kernel-netlink=y
-CONFIG_PACKAGE_strongswan-mod-nonce=y
-CONFIG_PACKAGE_strongswan-mod-openssl=y
-CONFIG_PACKAGE_strongswan-mod-pubkey=y
-CONFIG_PACKAGE_strongswan-mod-random=y
-CONFIG_PACKAGE_strongswan-mod-sha1=y
-CONFIG_PACKAGE_strongswan-mod-socket-default=y
-CONFIG_PACKAGE_strongswan-mod-stroke=y
-CONFIG_PACKAGE_strongswan-mod-updown=y
-CONFIG_PACKAGE_strongswan-mod-x509=y
-CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
-CONFIG_PACKAGE_strongswan-mod-xcbc=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
-CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_uclibcxx=y
-CONFIG_PACKAGE_vlmcsd=y
-CONFIG_PACKAGE_vsftpd=y
-CONFIG_PACKAGE_wget-ssl=y
-CONFIG_PACKAGE_wireless-regdb=y
-CONFIG_PACKAGE_wpad-openssl=y
-CONFIG_PACKAGE_xl2tpd=y
+CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_wifischedule=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_zlib=y
-CONFIG_PARTED_READLINE=y
-CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
-CONFIG_SQLITE3_ENABLE_COLUMN_METADATA=y
-CONFIG_SQLITE3_FTS3=y
-CONFIG_SQLITE3_FTS4=y
-CONFIG_SQLITE3_FTS5=y
-CONFIG_SQLITE3_JSON1=y
-CONFIG_SQLITE3_RTREE=y
-CONFIG_STRONGSWAN_ROUTING_TABLE="220"
-CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
-CONFIG_WPA_MSG_MIN_PRIORITY=3
-CONFIG_boost-compile-visibility-hidden=y
-CONFIG_boost-runtime-shared=y
-CONFIG_boost-static-and-shared-libs=y
-CONFIG_boost-variant-release=y
-# CONFIG_LIBCURL_CRYPTO_AUTH is not set
-# CONFIG_LIBCURL_NGHTTP2 is not set
-# CONFIG_LIBCURL_TFTP is not set
-# CONFIG_LIBCURL_THREADED_RESOLVER is not set
-# CONFIG_LIBCURL_TLS_SRP is not set
-# CONFIG_LIBCURL_UNIX_SOCKETS is not set
-# CONFIG_PACKAGE_libnghttp2 is not set
+# CONFIG_TARGET_ROOTFS_INITRAMFS is not set
+CONFIG_PACKAGE_default-settings=y
+# CONFIG_PACKAGE_kmod-inet-diag is not set
