--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -25,6 +25,7 @@ CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_PACKAGE_SAMBA_MAX_DEBUG_LEVEL=-1
 CONFIG_PACKAGE_attr=m
 CONFIG_PACKAGE_avahi-dbus-daemon=m
+CONFIG_PACKAGE_adguardhome=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_chinadns-ng=y
