--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -1,5 +1,5 @@
-CONFIG_TARGET_qualcommax=y
-CONFIG_TARGET_qualcommax_ipq60xx=y
+CONFIG_TARGET_ipq60xx=y
+CONFIG_TARGET_ipq60xx_generic=y
 CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_linksys_mr7350=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
