--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -148,7 +148,7 @@ CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-upnp is not set
 CONFIG_PACKAGE_luci-app-wol is not set
 CONFIG_PACKAGE_wol is not set
-CONFIG_PACKAGE_miniupnpd is not set
+CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-base=y
