--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -1,6 +1,8 @@
 CONFIG_TARGET_qualcommax=y
 CONFIG_TARGET_qualcommax_ipq60xx=y
 CONFIG_TARGET_qualcommax_ipq60xx_DEVICE_linksys_mr7350=y
+CONFIG_KERNEL_BUILD_DOMAIN="GitHub Actions"
+CONFIG_KERNEL_BUILD_USER="LVII"
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
@@ -63,7 +65,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_luci-app-chinadns=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-openclash=y 
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
@@ -71,13 +73,16 @@ CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+ 
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
+ 
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-cpufreq-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
+ 
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_pciutils=y
 CONFIG_PACKAGE_pdnsd-alt=y
@@ -91,6 +96,7 @@ CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
+CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_RSYNC_zlib=y
