--- a/config-ipq6000.cfg
+++ b/config-ipq6000.cfg
@@ -51,7 +51,7 @@ CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-ramfree is not set
@@ -99,7 +99,6 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
 # CONFIG_PACKAGE_wol is not set
 CONFIG_PACKAGE_xray-core=y
-CONFIG_PACKAGE_v2ray-core=y
 # CONFIG_TARGET_ROOTFS_INITRAMFS is not set
 CONFIG_PACKAGE_default-settings=y
 # CONFIG_PACKAGE_kmod-inet-diag is not set
