--- a/.github/workflows/build-openwrt-IPQ6000.yml
+++ b/.github/workflows/build-openwrt-IPQ6000.yml
@@ -20,7 +20,7 @@ on:
         默认: 'false'
 
 env:
-  REPO_URL: https://github.com/Glunefish/ipq6000
+  REPO_URL: https://github.com/sdf8057/ipq6000
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config-ipq6000.cfg
